syntax = "proto3";

package com.quick.dfs.namenode.rpc;

option java_multiple_files = true;
option java_package = "com.quick.dfs.namenode.rpc.model";
option java_outer_classname = "NameNodeRpcModel";

message RegisterRequest{  
    string ip  = 1;  
    string hostname  = 2;  
}  
message RegisterResponse{  
    int32 status  = 1;   
}
message HeartbeatRequest{  
    string ip  = 1;  
    string hostname  = 2;  
}  
message HeartbeatResponse{  
    int32 status  = 1;   
}
message MkDirRequest{
    string path = 1;
}
message MkDirResponse{
    int32 status = 1;
}
message ShutdownRequest{
    int32 code = 1;
}
message ShutdownResponse{
    int32 status = 1;
}
message FetchEditLogRequest{
    int32 code = 1;
    int64 syncedTxid = 2;
}
message FetchEditLogResponse{
    int32 status = 1;
    string editLogs = 2;
}
message UpdateCheckpointTxidRequest{
    int64 txid = 1;
}
message UpdateCheckpointTxidResponse{
    int32 status = 1;
}